--- a/src/assets/style/color.scss
+++ b/src/assets/style/color.scss
@@ -1,2 +1,5 @@
-$mainColor: #d81606;
+$mainColor: #d81e06;
+$bgColor: #EEEEEE;
 $lineColor: #e5e5e5;
+$textHintColor: #999999;
+$textColor: #333333;
